# multi-platform-renderer

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
app/common/: CMakeLists.txt
app/common/input_parser/: CMakeLists.txt
app/common/input_parser/inc/: input_parser.hpp
app/common/input_parser/src/: input_parser.cpp
app/standalone/: CMakeLists.txt
app/standalone/cmake/: shaders.cmake
app/standalone/src/: input_parser.cpp  main.cpp
libs/renderer/: CMakeLists.txt
libs/renderer/cmake/: dependencies.cmake
libs/renderer/command_buffer/: CMakeLists.txt
libs/renderer/command_buffer/inc/: command_buffer.hpp  command_buffer_dx.hpp  command_buffer_vulkan.hpp
libs/renderer/command_buffer/src/: command_buffer.cpp  command_buffer_dx.cpp  command_buffer_vulkan.cpp
libs/renderer/image/: CMakeLists.txt
libs/renderer/image/inc/: image.hpp  image_dx.hpp  image_vulkan.hpp
libs/renderer/image/src/: image.cpp  image_dx.cpp  image_vulkan.cpp
libs/renderer/material/: CMakeLists.txt
libs/renderer/material/inc/: material.hpp  material_dx.hpp  material_vulkan.hpp
libs/renderer/material/src/: material.cpp  material_dx.cpp  material_vulkan.cpp
libs/renderer/mesh/: CMakeLists.txt
libs/renderer/mesh/inc/: mesh.hpp  triangle_mesh.hpp  triangle_mesh_dx.hpp  triangle_mesh_vulkan.hpp
libs/renderer/mesh/src/: mesh.cpp  triangle_mesh.cpp  triangle_mesh_dx.cpp  triangle_mesh_vulkan.cpp
libs/renderer/render_resource/: CMakeLists.txt
libs/renderer/render_resource/inc/: render_resource.hpp
libs/renderer/render_resource/src/: render_resource.cpp
libs/renderer/render_target/: CMakeLists.txt
libs/renderer/render_target/inc/: render_target.hpp  render_target_dx.hpp  render_target_vulkan.hpp  render_target_window.hpp  render_target_window_dx.hpp  render_target_window_vulkan.hpp
libs/renderer/render_target/src/: render_target.cpp  render_target_dx.cpp  render_target_vulkan.cpp  render_target_window.cpp  render_target_window_dx.cpp  render_target_window_vulkan.cpp
libs/renderer/rendering_api/: CMakeLists.txt
libs/renderer/rendering_api/inc/: rendering_api.hpp  rendering_api_dx.hpp  rendering_api_vulkan.hpp
libs/renderer/rendering_api/src/: rendering_api.cpp  rendering_api_dx.cpp  rendering_api_vulkan.cpp
libs/renderer/rendering_device/: CMakeLists.txt
libs/renderer/rendering_device/inc/: rendering_device.hpp  rendering_device_dx.hpp  rendering_device_vulkan.hpp
libs/renderer/rendering_device/src/: rendering_device.cpp  rendering_device_dx.cpp  rendering_device_vulkan.cpp
libs/renderer/rendering_server/: CMakeLists.txt
libs/renderer/rendering_server/inc/: rendering_server.hpp
libs/renderer/scene/: CMakeLists.txt
libs/renderer/texture/: CMakeLists.txt
libs/renderer/uniform/: CMakeLists.txt
libs/renderer/utils/: CMakeLists.txt
libs/renderer/window/: CMakeLists.txt
(+99 files in other folders)
